exports[`test an add more licenses button should be shown when no more licenses are available 1`] = `
<li
  className="bhegyb">
  <span
    className="fGtTED">
    <span
      className="gFXyaK">
      <div>
        <div
          aria-checked={true}
          aria-label="very-unique-product-id"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="kganGp"
      src="icon.svg" />
  </span>
  <div
    className="hdGyW">
    <span
      className="kXXZFn">
      Subscription name
    </span>
    <span
      className="kwOabh">
      <span>
        0/20 remaining
      </span>
    </span>
    <button
      className="cvhYPv">
      <span>
        Buy more licenses for $69.00
      </span>
    </button>
  </div>
  <span
    className="hMwgWU">
    <a
      className="ifYuxa"
      href="/account/subscriptions/subId"
      onClick={[Function]}>
      <span>
        Details
      </span>
    </a>
  </span>
</li>
`;

exports[`test the sitesubscription matches the snapshot 1`] = `
<li
  className="bhegyb">
  <span
    className="fGtTED">
    <span
      className="gFXyaK">
      <div>
        <div
          aria-checked={true}
          aria-label="very-unique-product-id"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="kganGp"
      src="icon.svg" />
  </span>
  <div
    className="hdGyW">
    <span
      className="kXXZFn">
      Subscription name
    </span>
    <span
      className="kwOabh">
      <span>
        6/20 remaining
      </span>
    </span>
  </div>
  <span
    className="hMwgWU">
    <a
      className="ifYuxa"
      href="/account/subscriptions/subId"
      onClick={[Function]}>
      <span>
        Details
      </span>
    </a>
  </span>
</li>
`;
